# sdl2-template

./: .gitignore  .vscode  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  vcpkg.json
assets/: settings.json
ide-configs/: README.md
ide-configs/clion/: .idea-settings.md  CMakeSettings.json
ide-configs/visual-studio/: .vs-settings.md  CMakeSettings.json
ide-configs/vscode/: c_cpp_properties.json  launch.json  tasks.json
scripts/: build  clean  install  run  setup
scripts/powershell/: build.ps1  clean.ps1  install.ps1  run.ps1  setup.ps1
scripts/unix/: build.sh  clean.sh  install.sh  run.sh  setup.sh
scripts/windows/: build.bat  clean.bat  install.bat  run.bat  setup.bat
src/: main.cpp
src/engine/private/audio/: AudioManager.cpp
src/engine/private/core/: Engine.cpp  Game.cpp
src/engine/private/input/: Input.cpp
src/engine/private/physics/: Physics.cpp  RigidBody.cpp
src/engine/private/rendering/: Renderer.cpp  Sprite.cpp  Texture.cpp  Window.cpp
src/engine/private/save/: SaveManager.cpp
src/engine/private/text/: FontManager.cpp  Text.cpp  TextRenderer.cpp
src/engine/public/core/: Engine.h  (+2 more)
src/game/private/: GameApplication.cpp
src/game/public/: GameApplication.h
src/private/audio/: AudioManager.cpp
src/private/core/: Game.cpp
src/private/input/: Input.cpp
src/private/physics/: Physics.cpp
src/private/rendering/: Renderer.cpp  Sprite.cpp  Texture.cpp  Window.cpp
src/private/save/: SaveManager.cpp
src/private/text/: FontManager.cpp  Text.cpp  TextRenderer.cpp
src/private/utils/: Config.cpp  Logger.cpp
src/public/audio/: AudioManager.h
src/public/core/: Game.h  Transform.h
src/public/physics/: Physics.h
src/public/rendering/: Renderer.h  Sprite.h  Texture.h  Window.h
src/public/save/: SaveManager.h
src/public/text/: FontManager.h  Text.h
src/public/utils/: Config.h
(+11 files in other folders)
